2011-08-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/util/timer.hh: Add support for milliseconds output.

2011-06-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/morpho/skeleton_constrained.hh: Add a missing include.

2011-06-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/border/equalize.hh: Fix an invalid assertion.

2011-06-27  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/debug/draw_graph.hh: Limit the use of exact().

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/draw/polygon.hh: New.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Add a missing conversion routine for object ids.

	* mln/convert/from_to.hxx,
	* mln/util/object_id.hh: Here.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/draw/site_set.hh: new.

2011-05-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add new sample programs.

	* src/debug/Makefile.am: New targets.

	* src/debug/show_groups_bboxes_filtered.cc,
	* src/debug/show_text_lines_wo_seps.cc: New.

2011-05-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix precision issue with algebra::vec conversion.

	* mln/core/point.hh: Round float values.

	* tests/geom/rotate.cc: Add a test to be sure there is no
	precision issues.

2011-05-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add fastest versions for skeleton constrained related algorithms.

	* mln/morpho/skeleton_constrained.hh,
	* mln/topo/skeleton/crest.hh: Add fastest versions.

	* mln/topo/skeleton/is_simple_point.hh: Rewrite as functor and add
	fastest versions.

	* tests/topo/skeleton/is_simple_point.cc: Fix test.

2011-05-05  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	* mln/io/magick/save.hh: Add support for opacity.

2011-04-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/accu/stat/median_h.hh: Add missing operator=().

2011-03-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Regen generated files.

	* headers.mk,
	* tests/unit_test/unit-tests.mk: Here.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Regen generated files.

	* headers.mk,